@@ -22,6 +22,8 @@
     <java.version>21</java.version>
     <maven.compiler.release>21</maven.compiler.release>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    <surefire.jvm.args>-XX:+EnableDynamicAgentLoading -Dfile.encoding=UTF-8 -Dsun.jnu.encoding=UTF-8 -Dsun.stdout.encoding=UTF-8 -Dsun.stderr.encoding=UTF-8</surefire.jvm.args>
     <spring-boot.version>3.3.5</spring-boot.version>
     <spring-boot-autoconfigure.version>3.3.5</spring-boot-autoconfigure.version>
     <spring-cloud.version>2023.0.3</spring-cloud.version>
@@ -164,6 +166,13 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>3.2.5</version>
+          <configuration>
+            <argLine>${surefire.jvm.args}</argLine>
+            <systemPropertyVariables>
+              <logging.charset.console>UTF-8</logging.charset.console>
+              <logging.charset.file>UTF-8</logging.charset.file>
+            </systemPropertyVariables>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
